--- a/question_generator/locales/en.json
+++ b/question_generator/locales/en.json
@@ -46,7 +46,7 @@
 	"Which serie has episodes?": "Which serie has %s chapters?",
 	"Which serie has seasons?": "Which serie has %s seasons?",
 
-	"Which movie was realeased in?": "Which movie was released in %s?",
+	"Which movie was released in?": "Which movie was released in %s?",
 	"Which movie was directed by?": "Which movie was directed by %s?",
 
 	"Which videogames has sold more units?": "Which videogames has sold more units?",
