--- a/question_generator/locales/fr.json
+++ b/question_generator/locales/fr.json
@@ -43,7 +43,7 @@
 	"Which song was released in?": "Quelle chanson a été publiée en %s ?",
 	"Which song belongs to?": "À quel album appartient la chanson %s ?",
 
-	"Which serie has chapters?": "Quelle série comporte %s épisodes ?",
+	"Which serie has episodes?": "Quelle série comporte %s épisodes ?",
 	"Which serie has seasons?": "Quelle série compte %s saisons ?",
 
 	"Which movie was released in?": "Quel film est sorti en %s ?",
