--- a/question_generator/locales/it.json
+++ b/question_generator/locales/it.json
@@ -46,7 +46,7 @@
 	"Which serie has episodes?": "Quale serie ha %s episodi?",
 	"Which serie has seasons?": "Quale serie ha %s stagioni?",
 
-	"Which movie was realeased in?": "Quale film è stato rilasciato nel %s?",
+	"Which movie was released in?": "Quale film è stato rilasciato nel %s?",
 	"Which movie was directed by?": "Quale film è stato diretto da %s?",
 
 	"Which videogames has sold more units?": "Quale videogioco ha venduto più unità?",
