--- a/question_generator/locales/es.json
+++ b/question_generator/locales/es.json
@@ -47,7 +47,7 @@
 	"Which serie has episodes?": "¿Qué serie tiene %s episodios?",
 	"Which serie has seasons?": "¿Qué serie tiene %s temporadas?",
 
-	"Which movie was realeased in?": "¿Qué película fue lanzada en %s?",
+	"Which movie was released in?": "¿Qué película fue lanzada en %s?",
 	"Which movie was directed by?": "¿Qué película fue dirigida por %s?",
 
 	"Which videogames has sold more units?": "¿Qué videojuego ha vendido más unidades?",
