added 12_testing.adoc to index.adoc

--- a/docs/index.adoc
+++ b/docs/index.adoc
@@ -93,7 +93,8 @@ include::src/10_quality_requirements.adoc[]
 include::src/11_technical_risks.adoc[]
 
 <<<<
+include::src/12_testing.adoc[]
+
+<<<<
 // 12. Glossary
-include::src/12_glossary.adoc[]
-
-
+include::src/13_glossary.adoc[]
