--- a/docs/src/12_testing.adoc
+++ b/docs/src/12_testing.adoc
@@ -42,20 +42,40 @@ Load and stress tests allow us to evaluate the behavior of the system under diff
 
 [horizontal]
 |===
-|Test Case | Description
+|Test Case | Description | Response time <800ms | Response time 800-1200ms | Response time >1200ms | No response
 
 |Load test 1
 |Test with a low number of users.
+|100%
+|0%
+|0%
+|0%
 
 |Load test 2
 |Test with a medium number of users.
+|84.3%
+|9.1%
+|6.6%
+|0%
 
 |Stress test 1
 |Test with a peak of 1000 users.
+|64.5%
+|13.9%
+|20.2%
+|1.4%
 
 |Stress test 2
 |Test with a peak of 1500 users.
+|47.9%
+|10.8%
+|36.4%
+|4.9%
 
 |Stress test 3
 |Test with a peak of 2000 users.
+|49.2%
+|10.6%
+|22.3%
+|17.9%
 |===
