--- a/docs/index.adoc
+++ b/docs/index.adoc
@@ -93,8 +93,12 @@ include::src/10_quality_requirements.adoc[]
 include::src/11_technical_risks.adoc[]
 
 <<<<
+// 12. Testing
 include::src/12_testing.adoc[]
 
 <<<<
-// 12. Glossary
-include::src/13_glossary.adoc[]
+// 13. Monitoring
+include::src/13_monitoring.adoc[]
+<<<<
+// 14. Glossary
+include::src/14_glossary.adoc[]
